<resources>
    <string name="app_name">My Modules</string>
    <string name="C346">C346 Android Programming</string>
    <string name="C349">C349 iPad Programming</string>
    <string name="venue">Venue:</string>
    <string name="mod_cred">Module Credit:</string>
    <string name="semester">Semester:</string>
    <string name="year">Academic Year:</string>
    <string name="mod_name">Module Name:</string>
    <string name="mod_code">Module Code:</string>
</resources>
